ui/scss/component/_main.scss
body {
  overflow-x: hidden;
}

.main-wrapper {
  position: relative;
  margin-left: auto;
  margin-right: auto;
}

.main-wrapper--mac {
  margin-top: calc(var(--header-height) + var(--mac-titlebar-height));
}

.main-wrapper__inner {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  min-height: 100vh;
  margin-left: auto;
  margin-right: auto;
  margin-top: var(--header-height);
  padding: var(--spacing-l); // Unfortunately this is coupled with .claim-preview--tile width calculation
  padding-left: 0;
  padding-right: 0;

  > :first-child {
    flex-shrink: 0;
  }

  @media (max-width: $breakpoint-small) {
    padding: var(--spacing-xs);
    margin-top: var(--header-height-mobile);
  }

  @media (min-width: $breakpoint-large) {
    width: 100%;
  }
}

.main-wrapper__inner--filepage {
  padding: 0;
}

.main-wrapper__inner--theater-mode {
  padding-top: 0;
}

.sidebar--pusher {
  animation-timing-function: var(--resizing-animation-function);
  transition: transform var(--resizing-animation-timing);
  transform-origin: top center;
  position: absolute;

  @media (max-width: $breakpoint-small) {
    transform: translateX(0);
    width: calc(100% - var(--spacing-m));
  }

  @media (min-width: $breakpoint-small) {
    transform: translateX(var(--side-nav-width--micro));
    width: calc(100% - ((var(--side-nav-width--micro))));
  }
}

.sidebar--pusher--filepage {
  width: 100%;
}

.sidebar--pusher--open {
  @media (min-width: $breakpoint-medium) {
    transform: scaleX(0.9) translateX(calc(5.4 * var(--spacing-l))) scaleY(0.9);
  }
}

.main-wrapper__inner--auth {
  min-height: unset;
  padding: 0;

  .main--auth-page {
    min-height: unset;
  }
}

.main {
  position: relative;
  width: calc(100% - 2 * var(--spacing-l));
  max-width: var(--page-max-width);
  z-index: 0;
  margin-right: auto;
  margin-left: auto;
  min-height: calc(100vh - var(--header-height));

  @media (max-width: $breakpoint-small) {
    width: 100%;
    min-height: calc(100vh - var(--header-height-mobile));
  }
}

.main--file-page {
  width: 100%;
  max-width: var(--page-max-width--filepage);
  margin-left: auto;
  margin-right: auto;
  margin-top: var(--spacing-m);
  padding: 0 var(--spacing-m);
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;

  > :first-child {
    flex-grow: 2;
  }

  .file-page__secondary-content {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100%;
    margin-top: var(--spacing-m);
    max-width: var(--page-max-width--filepage);
    margin-left: auto;
    margin-right: auto;

    > :first-child {
      flex: 1;
      max-width: 100%;
    }

    .date_time {
      font-size: var(--font-small);
    }

    @media (min-width: $breakpoint-medium) {
      flex-direction: row;
    }
    @media (max-width: $breakpoint-small) {
      margin-top: var(--spacing-xs);
    }
  }

  @media (max-width: $breakpoint-small) {
    .media__subtitle--centered::before {
      content: '•';
      margin-right: var(--spacing-m);
    }
  }

  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }

  .file-page__post-comments {
    margin-top: var(--spacing-l);

    opacity: 0;
    animation: fadeIn 2s;
    animation-delay: 2s;
    animation-fill-mode: forwards;

    @media (min-width: $breakpoint-small) {
      padding: var(--spacing-m);
    }
  }

  .file-page__info {
    margin-top: var(--spacing-m);
  }

  .file-page__recommended {
    height: 0%;
    width: 38rem;
    margin-left: var(--spacing-l);

    .card__header--between {
      align-items: center;
    }

    @media (max-width: $breakpoint-medium) {
      width: 100%;
      margin-left: 0;
      margin-top: var(--spacing-l);
    }

    @media (max-width: $breakpoint-small) {
      .card__title-section {
        .card__title {
          height: 1em;
        }
      }
    }
  }

  .file-page__recommended-collection {
    @extend .file-page__recommended;
    flex-direction: column;
    overflow-wrap: break-word;

    .file-page__recommended-collection__row {
      display: block;

      @media (min-width: $breakpoint-medium) {
        max-width: 15rem;
      }

      @media (max-width: $breakpoint-medium) {
        max-width: 50rem;
      }
    }
  }

  @media (max-width: $breakpoint-medium) {
    flex-direction: column;
    > :first-child {
      margin-right: 0;
    }
  }

  @media (max-width: $breakpoint-small) {
    padding: var(--spacing-xs);
    flex-direction: column;
    padding-top: 0;
    margin-top: var(--spacing-s);
  }
}

.main--upcoming {
  @media (max-width: $breakpoint-small) {
    padding: var(--spacing-xs);
    flex-direction: column;
    padding-top: 0;
  }
}

.main--theater-mode {
  padding-left: 0;
  padding-right: 0;
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  width: 100vw;
  max-width: none;

  > :first-child {
    margin-right: 0;
  }

  .file-page__info {
    padding: 0 var(--spacing-m);
    margin-top: var(--spacing-m);
    max-width: var(--page-max-width--filepage);
    display: flex;
    flex-direction: column;
    margin-left: auto;
    margin-right: auto;
  }

  .file-page__recommended {
    width: 28rem;

    @media (max-width: $breakpoint-medium) {
      width: 100%;
    }
  }

  .file-page__secondary-content {
    padding: 0 var(--spacing-s);
    flex-direction: row;

    @media (max-width: $breakpoint-medium) {
      flex-direction: column;
    }
  }
}
/* ... */

